--- a/package.json
+++ b/package.json
@@ -1,21 +1,49 @@
 {
-  "name": "culendar-web",
+  "name": "rpdly",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/atlassian-navigation": "^0.12.5",
+    "@atlaskit/avatar": "^20.0.8",
+    "@atlaskit/badge": "^14.0.7",
+    "@atlaskit/banner": "^11.0.6",
+    "@atlaskit/button": "^15.1.4",
+    "@atlaskit/checkbox": "^12.0.0",
+    "@atlaskit/css-reset": "^6.0.5",
+    "@atlaskit/icon": "^21.1.4",
+    "@atlaskit/logo": "^13.0.7",
+    "@atlaskit/lozenge": "^10.0.7",
+    "@atlaskit/page-layout": "^0.10.11",
+    "@atlaskit/progress-bar": "^0.3.6",
+    "@atlaskit/textfield": "^4.0.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.16",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "localforage": "^1.9.0",
+    "node-sass": "^4.14.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-intl": "^2.9.0",
+    "react-lite-ui": "^1.0.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "recoil": "^0.1.2",
+    "styled-components": "^5.2.1",
+    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write --config ./.prettierrc \"**/*.{ts,tsx}\"",
+    "lint": "eslint './src/**/*.{ts,tsx}'; exit 0",
+    "lint:fix": "eslint --fix './src/**/*.{ts,tsx}'; exit 0"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +62,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-intl": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1"
   }
 }
